# AutoSenseAIAgent

./: .replit  app.py  autosense.db  pyproject.toml  replit.md
attached_assets/: Pasted-Perfect-below-is-a-SINGLE-COMPLETE-INDUSTRY-GRADE-MASTE_1765968053428.txt  Pasted-Perfect-below-is-a-SINGLE-COMPLETE-INDUSTRY-GRADE-MASTE_1765968138628.txt
backend/: api.py
backend/agents/: __init__.py  alert_agent.py  base_agent.py  breakdown_agent.py  eta_agent.py  feedback_agent.py  garage_recommendation_agent.py  location_agent.py  orchestrator.py  prediction_agent.py  pricing_agent.py  scheduling_agent.py  visualization_agent.py
backend/services/: alert_service.py  analytics_service.py  breakdown_service.py  garage_service.py  service_request_service.py  spare_parts_service.py  vehicle_service.py
database/: __init__.py  models.py  seed_data.py
frontend/: admin_portal.py  user_portal.py
frontend/components/: charts.py
utils/: auth.py
