[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.1",
    "streamlit-folium>=0.25.3",
]
